syntax = "proto3";

package zelvy.user;
option go_package = "github.com/rangodisco/zelvy/gen/zelvy/user";

message AddUserResponse {
  string message = 1;
}