syntax = "proto3";

package zelvy.user;
option go_package = "github.com/rangodisco/zelvy/gen/zelvy/user";

message GetWinnersRequest {
  string start_date = 1;
  string end_date = 2;
  int64 limit = 3;
}